Integration shutdown refinement